--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,1,0" rel="stylesheet" />
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   {% block head %}
   {% endblock %}
 </head>
