--- a/cloneugc/templates/base.html
+++ b/cloneugc/templates/base.html
@@ -2,15 +2,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}CloneUGC{% endblock %}</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap">
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,1,0" rel="stylesheet" />
-  <link rel="stylesheet" href="{% static 'css/base.css' %}">
-  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+  <link rel="icon" href="{% static 'assets/favicon.svg' %}" type="image/svg+xml" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded&icon_names={{ material_symbols }}&display=block:opsz,wght,FILL,GRAD@24,500,1,0" />
+  <link rel="stylesheet" href="{% static 'dist/css/base.css' %}" />
   {% block head %}
   {% endblock %}
 </head>
