--- a/cloneugc/templates/base.html
+++ b/cloneugc/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}CloneUGC{% endblock %}</title>
+  <meta name="description" content="Find viral TikTok formats for your app in minutes" />
   <link rel="icon" href="{% static 'assets/favicon.svg' %}" type="image/svg+xml" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
