Cleanup the header

--- a/cloneugc/apps/home/templates/home/home.html
+++ b/cloneugc/apps/home/templates/home/home.html
@@ -8,17 +8,17 @@
 {% endblock %}
 
 {% block content %}
-<header class="sticky top-0 z-20 w-full border-b border-black/15 bg-white/90 backdrop-blur">
-  <div class="container mx-auto flex max-w-screen-xl items-center justify-between px-6 py-2">
-    <span class="text-xl font-bold tracking-tight" style="font-variation-settings: 'slnt' 0, 'FLAR' 100, 'VOLM' 100">CloneUGC</span>
-    <nav class="hidden gap-8 text-base font-semibold md:flex">
-      <a href="#examples" class="transition-colors hover:text-pink-800">Examples</a>
-      <a href="#features" class="transition-colors hover:text-pink-800">Features</a>
-      <a href="#pricing" class="transition-colors hover:text-pink-800">Pricing</a>
-      <a href="#faq" class="transition-colors hover:text-pink-800">FAQ</a>
-      <a href="#contact" class="transition-colors hover:text-pink-800">Contact</a>
+<header class="sticky inset-x-0 top-0 z-10 border-b border-black/20 bg-white shadow-sm shadow-black/5">
+  <div class="mx-auto flex max-w-screen-xl items-center justify-between px-5 py-2.5">
+    <span class="text-xl font-bold tracking-tighter">CloneUGC</span>
+    <nav class="hidden space-x-8 text-base font-semibold *:hover:text-pink-900 md:block">
+      <a href="#examples">Examples</a>
+      <a href="#features">Features</a>
+      <a href="#pricing">Pricing</a>
+      <a href="#faq">FAQ</a>
+      <a href="#contact">Contact</a>
     </nav>
-    <a href="#contact" class="inline-block rounded-lg bg-pink-800 px-6 py-3 font-bold text-white transition-colors active:bg-pink-900">Get Started</a>
+    <a href="#contact" class="rounded-md bg-pink-800 px-4.5 py-2 text-lg font-bold text-white hover:bg-pink-900">Get Started</a>
   </div>
 </header>
 
