--- a/cloneugc/apps/home/templates/home/home.html
+++ b/cloneugc/apps/home/templates/home/home.html
@@ -8,17 +8,22 @@
 {% endblock %}
 
 {% block content %}
-<header class="sticky inset-x-0 top-0 z-10 border-b border-black/20 bg-white shadow-sm shadow-black/5">
+<header class="@container sticky inset-x-0 top-0 z-10 border-b border-black/15 bg-white shadow-sm shadow-black/5">
   <div class="mx-auto flex max-w-screen-xl items-center justify-between px-5 py-2.5">
-    <span class="text-xl font-bold tracking-tighter">CloneUGC</span>
-    <nav class="hidden space-x-8 text-base font-semibold *:hover:text-pink-900 md:block">
+    <div class="w-full max-w-50">
+      <span class="text-xl font-bold tracking-tighter">CloneUGC</span>
+    </div>
+    <nav class="hidden space-x-7 text-base font-semibold *:hover:text-pink-900 @4xl:block">
       <a href="#examples">Examples</a>
       <a href="#features">Features</a>
       <a href="#pricing">Pricing</a>
       <a href="#faq">FAQ</a>
       <a href="#contact">Contact</a>
     </nav>
-    <a href="#contact" class="rounded-md bg-pink-800 px-4.5 py-2 text-lg font-bold text-white hover:bg-pink-900">Get Started</a>
+    <nav class="flex w-full max-w-50 flex-wrap gap-2.5">
+      <a href="{% url 'login' %}" class="inline-block shrink-0 rounded-md border border-black/25 bg-white px-3.5 py-2 text-base font-semibold hover:bg-stone-200">Login</a>
+      <a href="#contact" class="inline-block shrink-0 rounded-md bg-pink-800 px-3.5 py-2 text-base font-semibold text-white hover:bg-pink-900">Get Started</a>
+    </nav>
   </div>
 </header>
 
