--- a/cloneugc/apps/home/templates/home/home.html
+++ b/cloneugc/apps/home/templates/home/home.html
@@ -544,9 +544,7 @@
 </section>
 
 <!-- Footer -->
-<footer class="border-t border-black/15 bg-stone-50 py-8 text-center text-base text-stone-600">
-  <div class="container mx-auto max-w-screen-lg px-6">
-    <p class="font-semibold">© 2025 CloneUGC. All rights reserved.</p>
-  </div>
+<footer class="flex items-center justify-center border-t border-black/10 bg-stone-50 px-5 py-7 text-center text-base font-semibold text-stone-500">
+  <p>CloneUGC by Azamat & Almaz</p>
 </footer>
 {% endblock %}
