--- a/cloneugc/templates/base.html
+++ b/cloneugc/templates/base.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{% block title %}CloneUGC{% endblock %}</title>
   <meta name="description" content="Find viral TikTok formats for your app in minutes" />
-  <link rel="icon" href="{% static 'assets/favicon.svg' %}" type="image/svg+xml" />
+  <link rel="icon" href="{% static 'favicon.svg' %}" type="image/svg+xml" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded&icon_names={{ material_symbols }}&display=block:opsz,wght,FILL,GRAD@24,500,1,0" />
-  <link rel="stylesheet" href="{% static 'dist/css/base.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/base.css' %}" />
   {% block head %}
   {% endblock %}
 </head>
