--- a/cloneugc/assets/css/base.css
+++ b/cloneugc/assets/css/base.css
@@ -3,7 +3,10 @@
 @layer base {
   body {
     font-family: "Commissioner", var(--font-sans);
-    font-variation-settings: "slnt" 0, "FLAR" 0, "VOLM" 0;
+    font-variation-settings:
+      "slnt" 0,
+      "FLAR" 0,
+      "VOLM" 0;
     background-color: var(--color-stone-50);
   }
 }
@@ -97,5 +100,9 @@
 
 .material-symbols-rounded {
   font-size: 24px;
-  font-variation-settings: "FILL" 1, "wght" 500, "GRAD" 0, "opsz" 24;
+  font-variation-settings:
+    "FILL" 1,
+    "wght" 500,
+    "GRAD" 0,
+    "opsz" 24;
 }
