--- a/cloneugc/apps/studio/templates/studio/ugc_form.html
+++ b/cloneugc/apps/studio/templates/studio/ugc_form.html
@@ -4,6 +4,13 @@
 {% block title %}Create UGC{% endblock %}
 
 {% block head %}
+  <script type="importmap">
+    {
+      "imports": {
+        "studio/preview-audio": "{% static 'studio/js/preview-audio.js' %}"
+      }
+    }
+  </script>
   <script type="module" src="{% static 'studio/js/ugc-form.js' %}"></script>
 {% endblock %}
 
