Extract prepare script into file

--- a/cloneugc/apps/studio/templates/studio/ugc_form.html
+++ b/cloneugc/apps/studio/templates/studio/ugc_form.html
@@ -7,7 +7,8 @@
   <script type="importmap">
     {
       "imports": {
-        "studio/preview-audio": "{% static 'studio/js/preview-audio.js' %}"
+        "studio/preview-audio": "{% static 'studio/js/preview-audio.js' %}",
+        "studio/prepare-script": "{% static 'studio/js/prepare-script.js' %}"
       }
     }
   </script>
