--- a/cloneugc/apps/studio/templates/studio/ugc_form.html
+++ b/cloneugc/apps/studio/templates/studio/ugc_form.html
@@ -8,7 +8,8 @@
     {
       "imports": {
         "studio/preview-speech": "{% static 'studio/js/preview-speech.js' %}",
-        "studio/prepare-script": "{% static 'studio/js/prepare-script.js' %}"
+        "studio/prepare-script": "{% static 'studio/js/prepare-script.js' %}",
+        "studio/script-editor/break": "{% static 'studio/js/script-editor/break.js' %}"
       }
     }
   </script>
