--- a/cloneugc/apps/studio/templates/studio/ugc_form.html
+++ b/cloneugc/apps/studio/templates/studio/ugc_form.html
@@ -9,7 +9,8 @@
       "imports": {
         "studio/preview-speech": "{% static 'studio/js/preview-speech.js' %}",
         "studio/prepare-script": "{% static 'studio/js/prepare-script.js' %}",
-        "studio/script-editor/break": "{% static 'studio/js/script-editor/break.js' %}"
+        "studio/script-editor/break": "{% static 'studio/js/script-editor/break.js' %}",
+        "studio/script-editor/spell": "{% static 'studio/js/script-editor/spell.js' %}"
       }
     }
   </script>
