--- a/cloneugc/apps/studio/templates/studio/ugc_form.html
+++ b/cloneugc/apps/studio/templates/studio/ugc_form.html
@@ -7,6 +7,7 @@
   <script type="importmap">
     {
       "imports": {
+        "@tiptap/core": "https://cdn.jsdelivr.net/npm/@tiptap/core@2.12.0/+esm",
         "studio/preview-speech": "{% static 'studio/js/preview-speech.js' %}",
         "studio/prepare-script": "{% static 'studio/js/prepare-script.js' %}",
         "studio/script-editor/break": "{% static 'studio/js/script-editor/break.js' %}",
