--- a/cloneugc/assets/css/base.css
+++ b/cloneugc/assets/css/base.css
@@ -98,6 +98,8 @@
   }
 }
 
+@custom-variant tp-node-selected (&.ProseMirror-selectednode);
+
 .material-symbols-rounded {
   font-size: 24px;
   font-variation-settings:
