Update script editor usage

--- a/cloneugc/apps/studio/templates/studio/ugc_form.html
+++ b/cloneugc/apps/studio/templates/studio/ugc_form.html
@@ -14,12 +14,12 @@
         "@tiptap/extension-text": "https://cdn.jsdelivr.net/npm/@tiptap/extension-text@2.12.0/+esm",
         "studio/preview-speech": "{% static 'studio/js/preview-speech.js' %}",
         "studio/prepare-script": "{% static 'studio/js/prepare-script.js' %}",
+        "studio/script-editor": "{% static 'studio/js/script-editor.js' %}",
         "studio/script-editor/break": "{% static 'studio/js/script-editor/break.js' %}",
         "studio/script-editor/spell": "{% static 'studio/js/script-editor/spell.js' %}"
       }
     }
   </script>
-  <script type="module" src="{% static 'studio/js/script-editor.js' %}"></script>
   <script type="module" src="{% static 'studio/js/ugc-form.js' %}"></script>
 {% endblock %}
 
